# snake

./: CMakeLists.txt  Direction.h  Food.h  README.md  Snake.cpp  SnakeGame
include/: Food.h  Game.h  Snake.h
src/: Food.cpp  Game.cpp  Snake.cpp
